--- a/client/index.html
+++ b/client/index.html
@@ -23,7 +23,8 @@
         </div>
     </li>
     </ul>
-    
+
+    <script src="/rooms.js"></script>
     <script src="/index.js"></script>
 </body>
 </html>
