implementing rooms, reworking code

--- a/client/index.html
+++ b/client/index.html
@@ -16,9 +16,13 @@
         </div>
         <input class="inputMessage" placeholder="Type in a message!"/>
     </li>
+    <li class="page lobby">
+        <div id="roomList"></div>
+    </li>
     <li class="page login">
         <div class="form">
           <h3 class="title">Enter your username:</h3>
+          <div id="errorMessage"></div>
           <input class="usernameInput" type="text" maxlength="14" />
         </div>
     </li>
