updated ui again, rooms should work?

--- a/client/index.html
+++ b/client/index.html
@@ -21,17 +21,16 @@
         <input class="inputMessage" placeholder="Type in a message!"/>
     </li>
     <li class="lobby page">
-        <div id="rooms"></div>
+        <h1 style="text-align: center; margin-top: 2%;">Join a room!</h1>
+        <div class="room-container" id="rooms"></div>
     </li>
     <li class="login page">
         <div class="form">
           <h3 class="title">Enter your username:</h3>
           <div id="errorMessage"></div>
-          <input class="usernameInput" type="text" maxlength="14" />
+          <input class="usernameInput" type="text" maxlength="16"/>
         </div>
     </li>
     </ul>
-
-    
 </body>
 </html>
