started working on game canvas

--- a/client/index.html
+++ b/client/index.html
@@ -14,7 +14,11 @@
     </script><script src="/index.js"></script>
 
     <ul class="pages">
-    <li class="chat page">
+    <li class="room page">
+        <div class="canvas-container">
+            <canvas id="gameCanvas">Whoops! Something went wrong when trying to load the game.</canvas>
+            <script src="/game.js"></script>
+        </div>
         <div class="chatArea">
             <ul class="messages"></ul>
         </div>
